# debussy_concert

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pytest.ini  requirements.txt  setup.cfg  setup.py
airflow_concert/composer/: composer_base.py  debussy.py  vivaldi.py
airflow_concert/composition/: composition_base.py  debussy.py  feux_dartifice.py  reverse_etl.py  vivaldi.py
airflow_concert/compositor/: vivaldi.py
airflow_concert/config/: config_composition.py  config_dag_parameters.py  config_environment.py  config_integration.py  data_ingestion.py  movement_parameters.py  reverse_etl.py
airflow_concert/entities/: table.py
airflow_concert/motif/: append_csv.py  bigquery_extract_job.py  bigquery_job.py  bigquery_query_job.py  bigquery_to_bigquery.py  create_external_table.py  end.py  export_table.py  merge_table.py  motif_base.py  start.py
airflow_concert/movement/: data_ingestion.py  ingestion_to_landing.py  interfaces.py  landing_to_raw.py  movement_base.py  protocols.py  raw_to_trusted.py  reverse_etl.py
airflow_concert/operators/: basic.py  bigquery.py  datastore.py  mysql_check.py
airflow_concert/phrase/: append_csv.py  bigquery_to_bigquery.py  end.py  export_bigquery_table.py  export_table.py  ingestion_to_landing.py  landing_to_raw.py  merge_csv.py  merge_table.py  phrase_base.py  protocols.py  raw_to_reverse_etl.py  raw_to_trusted.py  reverse_etl_to_storage.py  start.py  storage_to_destination.py
airflow_concert/services/: tables.py
docs/: discord_guidelines.md
examples/: environment.yaml
tests/: conftest.py
(+352 files in other folders)
