[metadata]
name = debussy_concert
version = attr: debussy_concert.__version__
url = https://github.com/DotzInc/debussy_concert
long_description = file: README.md, CHANGELOG.md
long_description_content_type = text/markdown
keywords =
    Debussy Framework
    debussy_concert
license = Apache-2.0
license_file = LICENSE
platforms = any
classifiers = 
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
    Topic :: Utilities
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
python_requires = >=3.6
install_requires = file: requirements.txt
packages = find:

[options.packages.find]
exclude =
    tests*
    docs*